# RAG-against-the-machine-42

./: .gitignore  main.py  pyproject.toml  source.txt  test.py
bm25s_index_animals/: vocab.index.json
bm25s_index_vllm/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/datasets/AnsweredQuestions/: dataset_code_public.json  dataset_docs_public.json
data/datasets/UnansweredQuestions/: dataset_docs_public.json
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json
data/processed/chunks/: chunks.json
src/answer/: AnswerBot.py  __init__.py
src/chunkers/: __init__.py
src/models/: __init__.py  models.py
src/student/: __init__.py  main.py  utils.py
src/student/answer/: AnswerBot.py  __init__.py  answer_bot.py
src/student/chunkers/: chunkers.py
src/student/evaluate/: __init__.py  evaluate.py
src/student/index/: __init__.py  index.py
src/student/models/: __init__.py  models.py
src/student/search/: __init__.py  search.py
test/: dspy_test.py  pathlib_test.py  resume_bot.py  test.py
