[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.9",
    "chonkie>=1.6.8",
    "dspy>=3.2.1",
    "fire>=0.7.1",
    "langchain>=1.3.1",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "tree-sitter-language-pack>=1.8.1",
]
