[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "bm25s>=0.3.9",
    "botocore>=1.43.26",
    "chonkie>=1.6.8",
    "dspy>=3.2.1",
    "fire>=0.7.1",
    "langchain>=1.3.1",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "tree-sitter-language-pack>=1.8.1",
]
